<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="3"
    tools:context="com.example.kim.breaktimeapp.MainActivity">

    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="110dp"
        android:layout_height="130dp"
        android:text="@string/app1"
        android:id="@+id/btnApp1"
        android:layout_weight="0.20"
        android:onClick="startTicTacToeGame"
        android:background="#9cfaaf" />

    <Button
        android:layout_width="110dp"
        android:layout_height="130dp"
        android:text="@string/app2"
        android:id="@+id/btnApp2"
        android:layout_weight="0.20"
        android:background="#9cdcfa"
        android:onClick="startAnimalGallery" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="110dp"
            android:layout_height="130dp"
            android:text="@string/app3"
            android:id="@+id/btnApp3"
            android:layout_weight="0.20"
            android:background="#e69cfa"
            android:onClick="startPlayRockPaperScissors" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="110dp"
            android:layout_height="130dp"
            android:text="@string/app5"
            android:id="@+id/btnApp5"
            android:layout_weight="0.20"
            android:background="#9cfaaf"
            android:onClick="startReadingPoem" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="110dp"
            android:layout_height="130dp"
            android:text="Kid Movies"
            android:id="@+id/btnApp7"
            android:layout_weight="0.20"
            android:onClick="startKidMovies"
            android:layout_gravity="bottom"
            android:background="#e69cfa" />

        <Button
            android:layout_width="110dp"
            android:layout_height="130dp"
            android:text="@string/app8"
            android:id="@+id/btnApp8"
            android:layout_weight="0.20"
            android:layout_gravity="bottom"
            android:background="#f36906"
            android:onClick="startFlowerSpinner" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:text="@string/exit"
            android:id="@+id/btnExit"
            android:layout_weight="0.5"
            android:layout_gravity="bottom"
            android:textSize="26dp"
            android:gravity="center|center_horizontal"
            android:textStyle="normal"
            android:background="#03d727"
            android:onClick="exitApp()" />


    </LinearLayout>
</LinearLayout>
